--- a/kubernetes_manifest/deployment.yaml
+++ b/kubernetes_manifest/deployment.yaml
@@ -32,8 +32,8 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 80
-  type: NodePort
-
+  type: LoadBlancer
+  
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
