--- a/kubernetes_manifest/deployment.yaml
+++ b/kubernetes_manifest/deployment.yaml
@@ -32,7 +32,7 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 80
-  type: LoadBlancer
+  type: ClusterIP
   
 ---
 apiVersion: networking.k8s.io/v1
