Created variables for S3 Name & CDN ID

--- a/kubernetes_manifest/deployment.yaml
+++ b/kubernetes_manifest/deployment.yaml
@@ -50,7 +50,7 @@ metadata:
     alb.ingress.kubernetes.io/healthcheck-port: "80"
 spec:
   rules:
-  - host: amansdlc.com   # Replace with your domain
+  - host: amansdlc.com  
     http:
       paths:
       - path: /
